# ros2-delivery-robot-coppelia

./: README.md
proyecto_final/: CMakeLists.txt  package.xml
proyecto_final/launch/: launch.py  launch_project.py
proyecto_final/src/: ir_line_follower_node.cpp  lidar_bridge_node.cpp  traffic_light_node.cpp
proyecto_final/urdf/: turtlebot3_burger_cam.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
