<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>proyecto_final</name>
  <version>1.0.0</version>

  <description>
    Nodo y utilidades para seguimiento de línea y evitación de obstáculos
    en TurtleBot3 dentro de CoppeliaSim (ROS 2 Humble).
  </description>

  <maintainer email="aandgom@etsinf.upv.es">Alberto Andrés</maintainer>
  <license>Apache-2.0</license>

  <url type="repository">https://github.com/larmesto/turtlebot3_coppeliasim</url>
  <url type="bugtracker">https://github.com/larmesto/turtlebot3_coppeliasim/issues</url>

  <!-- ─────────── DEPENDENCIAS ─────────── -->
  <!-- herramienta de construcción -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- librerías que el código #include y enlaza -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- nodos externos que solo usamos en runtime -->
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

